# morris_aima

./: CMakeLists.txt  EntityFactory.cpp  EntityFactory.h  EntityFactoryFactory.cpp  EntityFactoryFactory.h  LICENSE  README.md  main.cpp
Projects/MissionariesAndCannibals/: MandCEnvironmentState.cpp  MandCEnvironmentState.h
Projects/VacuumWorld/: CMakeLists.txt  main.cpp  simulation_output.txt
Projects/VacuumWorld/config/: VacuumWorld_json_output_default.mapout  VacuumWorld_map_default.map  map1.map  map2.map  map3.map  map4.map  map5.map  map6.map  map7.map  map8.map  wall_world_large_map1.map  wall_world_medium_map1.map  wall_world_small_map1.map
Projects/VacuumWorld/include/: DirtEntity.h  RandomVacuumAction.h  VacuumAction.h  VacuumAgent.h  VacuumEnvironment.h  VacuumEnvironmentState.h  VacuumFactory.h  VacuumWorldPerformanceMeasure.h  VacuumWorldSimulationResult.h  WallEntity.h
Projects/VacuumWorld/src/: RandomVacuumAction.cpp  Randomized_VacuumWorld_DEMO.cpp  SimpleReflexVacuumAgent.cpp  SimpleVacuumAction.cpp  VacuumAction.cpp  VacuumAgent.cpp  VacuumEnvironment.cpp  VacuumEnvironmentState.cpp  VacuumFactory.cpp  VacuumWorldPerformanceMeasure.cpp  VacuumWorldSimulationResult.cpp  VacuumWorld_simple_DEMO.cpp  WallEntity.cpp
Projects/config/: MissionariesAndCannibalsEnvironment_default_json_outpu.map
config/: TileEnvironment_json_output_default.mapout  TileEnvironment_map_default.map  TileEnvironment_map_default.map_  VacuumWorld_map1.map  testMap.map
core/: Agent.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  EnvironmentState.h  FrameVisualizer.cpp  FrameVisualizer.h  SimulationResult.cpp  SimulationResult.h  Tile.cpp  Tile.h  TileEnvironment.cpp  TileEnvironment.h  TileEnvironmentState.cpp  TileEnvironmentState.h  TileGrid.cpp  TileGrid.h  TileLocation.cpp  TileLocation.h  Visualizer.cpp  Visualizer.h
core/include/: Action.h  Agent.h  Entity.h  Environment.h  EnvironmentState.h  PerformanceMeasure.h  SimulatorResult.h  Visualizer.h
demos/: VacuumWorld_demo
docs/: parameters.doc  parameters.md
include/: EnvironmentStateFactory.h  Simulator.h  SimulatorFactory.h  SimulatorResultFactory.h  Tile.h  TileEnvironment.h  TileEnvironmentState.h  TileGrid.h  TileSimulator.h
morris_aima_control/: CMakeLists.txt  README.md  package.xml
morris_aima_control/docs/: services.md  vacuum_world_results_about.md
morris_aima_control/include/: MainController.h  Result.h  ResultFactory.h  VacuumWorldResult.h
morris_aima_control/launch/: vacuum_world.launch
morris_aima_control/src/: MainController.cpp  Result.cpp  ResultFactory.cpp  VacuumWorldResult.cpp  morris_aima_controller_node.cpp  morris_aima_result_node.cpp
morris_aima_environment/: CMakeLists.txt  package.xml
morris_aima_environment/docs/: .tile_environment_yaml.md.swp  parameters.doc  parameters.md  services.md  tile_environment_about.md  tile_environment_parameters.md  tile_environment_yaml.md  vacuum_world_about.md
morris_aima_environment/include/: EntityFactory.h  EntityFactoryFactory.h  Environment.h  EnvironmentFactory.h  EnvironmentStateFactory.h  Location.h  Percept.h
morris_aima_environment/include/MissionariesAndCannibals/: MandCEnvironment.h
morris_aima_environment/include/TileEnvironment/: TileEnvironment.h  TileEnvironmentState.h  TileGrid.h
morris_aima_environment/include/TileEnvironment/VacuumWorld/: RandomReflexVacuumAgent.h  SimpleReflexVacuumAgent.h  SimpleVacuumAction.h  VacuumEnvironment.h  VacuumFactory.h  VacuumPercept.h
morris_aima_environment/launch/: vacuum_world.launch
morris_aima_environment/maps/vacuum_world/: default.yaml  small_vac_world.json  small_vac_world.yaml  wall_world_large.json  wall_world_medium.json
morris_aima_environment/src/: EntityFactoryFactory.cpp  Environment.cpp  EnvironmentFactory.cpp  EnvironmentStateFactory.cpp  Location.cpp  morris_aima_environment_node.cpp
morris_aima_environment/src/MissionariesAndCannibals/: MandCAction.cpp  MandCEnvironment.cpp  MandCEnvironmentState.cpp  StateNode.cpp
morris_aima_environment/src/TileEnvironment/: Tile.cpp  TileEnvironment.cpp  TileEnvironmentState.cpp  TileGrid.cpp
morris_aima_environment/src/TileEnvironment/VacuumWorld/: DirtEntity.cpp  RandomReflexVacuumAgent.cpp  VacuumEnvironment.cpp  VacuumEnvironmentState.cpp  VacuumFactory.cpp  VacuumPercept.cpp  VacuumWorldPerformanceMeasure.cpp
morris_aima_msgs/: CMakeLists.txt  package.xml
morris_aima_msgs/msg/: MissionariesAndCannibalsAction.msg  MissionariesAndCannibalsInfo.msg  MissionariesAndCannibalsNode.msg  MissionariesAndCannibalsState.msg  TileEntityInfo.msg  TileEnvironmentInfo.msg  VacuumWorldInfo.msg
morris_aima_msgs/srv/: Load.srv
morris_aima_visualization/: CMakeLists.txt  README.md  TileVisualizer.cpp  TileVisualizer.h  package.xml
morris_aima_visualization/docs/: .tile_frame_visualizer_about.md.swp  tile_frame_visualizer_about.md
morris_aima_visualization/include/: FrameVisualizer.h  QNodeRosVisualizer.h  TerminalTextVisualizer.h  TileFrameVisualizer.h  TileMainWindow.h  TileQRosNode.h  TileVisualizer.h  VisualEntity.h  VisualEntityFactory.h  VisualImageEntity.h  VisualTileGrid.h  Visualizer.h  VisualizerFactory.h
morris_aima_visualization/src/: FrameVisualizer.cpp  QNodeRosVisualizer.cpp  TerminalTextVisualizer.cpp  TileFrameVisualizer.cpp  TileMainWindow.cpp  TileQRosNode.cpp  TileVisualizer.cpp  VisualEntity.cpp  VisualEntityFactory.cpp  VisualImageEntity.cpp  VisualShapeEntity.cpp  VisualTile.cpp  VisualTileGrid.cpp  Visualizer.cpp  VisualizerFactory.cpp  mainwindow.cpp  morris_aima_visualization_node.cpp
src/: Agent.cpp  Entity.cpp  EntityFactory.cpp  EntityFactoryFactory.cpp  Environment.cpp  EnvironmentState.cpp  EnvironmentStateFactory.cpp  Simulator.cpp  SimulatorFactory.cpp  SimulatorResult.cpp  SimulatorResultFactory.cpp  TileEnvironment.cpp  TileEnvironmentState.cpp  TileGrid.cpp  TileLocation.cpp  TileSimulator.cpp
testing/: CMakeLists.txt  Entity_Tests.cpp  TileEnvironmentState_Tests.cpp  TileEnvironment_Tests.cpp  TileGrid_Tests.cpp  Tile_Tests.cpp
visualizer/: VisualEntity.cpp  VisualEntity.h
(+29 files in other folders)
